add css note: color

--- a/zerotohero/html/index.html
+++ b/zerotohero/html/index.html
@@ -60,7 +60,7 @@ Cillum dolore eu fugiat nulla , pariatur:
 	</tbody>
 </table>
 
-
+<div id="service-image">jfewjojifewjfo</div>
 <img src="../img/img-2.jpg">
 
 <h2 class="subtitle">Contact Us</h2>
