--- a/zerotohero/html/index.html
+++ b/zerotohero/html/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<title>My Website</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <title>My Website</title>
 </head>
 <body>
 
@@ -13,13 +16,13 @@ tempor incididunt ut labore et dolore magna aliqua.</p>
 
 <h2 class="subtitle">About Me</h2>
 
-<img src="../img/img-1.jpg">
+<img src="../img/img-1.jpg" id="about-us-image">
 
 <p class="para-text">Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+<span class="italics">Lorem ipsum dolor sit amet, consectetur adipisicing elit,</span> sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat.
@@ -37,7 +40,7 @@ Cillum dolore eu fugiat nulla , pariatur:
 
   <a href="http://www.google.com" class="link">To Googole</a>
 
-<table border="1">
+<table border="1" class="site-table">
 	<thead>
 		<tr>
 			<td>Lorem</td>
@@ -64,6 +67,38 @@ Cillum dolore eu fugiat nulla , pariatur:
 <img src="../img/img-2.jpg">
 
 <h2 class="subtitle">Contact Us</h2>
+
+<div class="container">
+  <div class="container-item" style="align-self: flex-start;">Lire</div>
+  <div class="container-item" style="align-self: flex-end;">Asuka</div>
+  <div class="container-item" style="align-self: flex-start;">Fina</div>
+  <div class="container-item" style="align-self: center;">Fuuka</div>
+  <div class="container-item" style="align-self: flex-start;">Sora</div>
+  <span style="display: none;">
+  <div class="container-item" style="order: 5;">Karen</div>
+  <div class="container-item" style="order: 3;">rena</div>
+  <div class="container-item" style="order: 8;">mei</div>
+  <div class="container-item" style="order: 4;">aisa</div>
+  <div class="container-item" style="order: 10;">haruna</div>
+  </span>
+</div>
+
+
+<div class="grid-container">
+  <div class="grid-item" style="background: green; grid-area: 2 / 1 / span 2 / span 3">Lire</div>
+  <div class="grid-item" style="background: red;">Asuka</div>
+  <div class="grid-item" style="background: steelblue;">Fina</div>
+  <div class="grid-item" style="background: lightgreen;">Fuuka</div>
+  <div class="grid-item" style="background: pink;">Sora</div>
+  <div class="grid-item" style="background: orange;">Karen</div>
+</div>
+
+
+
+
+
+
+
 
 <form>
 	<input type="text" placeholder="Full Name" class="form-input">
