--- a/zerotohero/html/index.html
+++ b/zerotohero/html/index.html
@@ -14,7 +14,7 @@
 <p class="para-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua.</p>
 
-<h2 class="subtitle">About Me</h2>
+<h2 class="subtitle" id="about-me">About Me</h2>
 
 <img src="../img/img-1.jpg" id="about-us-image">
 
@@ -104,7 +104,7 @@ Cillum dolore eu fugiat nulla , pariatur:
 	<input type="text" placeholder="Full Name" class="form-input">
 	<input type="email" placeholder="Email" class="form-input"">
 	<textarea></textarea>
-	<button>Submit</button>
+	<button class="submit-button">Submit</button>
 
 </form>
 
