--- a/zerotohero/challenge/html/index_final.html
+++ b/zerotohero/challenge/html/index_final.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Roboto+Condensed:400,700" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="../css/my_style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<title>Website Styling Challenge</title>
 </head>
 <body>
